Archive2/15/ae2ba02d4f0c1c/output
main.cpp:11:13: error: cannot refer to class template 'close_at_tolerance' without a template argument list
    cout << close_at_tolerance(1000, 1000.0001, 0.0001) << endl;
            ^
/usr/local/include/boost/test/floating_point_comparison.hpp:164:7: note: template is declared here
class close_at_tolerance {
      ^
1 error generated.
